# RayTracing

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  run.sh
SomeBeautifulErrors/: FirstDiffusedSphere.ppm  FixedShadowAcneSphere.ppm  NotAntialiasedSphere.ppm
docs/Notes/: Rays.md  Shading.md  Sphere.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Common.h  Hittable.cpp  Hittable.h  HittableList.cpp  HittableList.h  Interval.cpp  Interval.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vector.cpp  Vector.h  main.cpp
